# TicTacToe-OpenGL

./: .gitignore  README.md  TicTacToe.sln
Shaders/: CMakeLists.txt  MapShader.frag  MapShader.vert  Player.frag  TitleEnterShader.frag  TitleEnterShader.vert  TitleShader.frag  TitleShader.vert
Textures/: CMakeLists.txt
src/: Background.h  ChooseMode.h  Enemy.h  GameLogic.h  Input.h  Shader.h  camera.h  window.h
src/main_files/: CMakeLists.txt  ControllerASCII.h  GameMap.h  Input.cpp  Player.h  Select.h  Title.h  Utility.h  WinBox.h  engine.cpp  engine.h  glad.c  main.cpp  modeBorder.h  stb_image.h  window.cpp
